--- a/_config.yml
+++ b/_config.yml
@@ -6,29 +6,27 @@ highlighter:      rouge
 permalink:        pretty
 
 # Setup
-title:            Long Qian
-tagline:          'Long Qian'
-description:      'Reality augmented.<br>My personal blog of tech and life.'
-url:              http://longqian.me/
+title:            princeliebe
+tagline:          'princelieb'
+description:      'Reality augmented.<br>My personal blog.'
+url:              http://princeliebe.github.io/
 
 author:
-  name:           'Long Qian'
-  url:            http://longqian.me/
+  name:           'princeliebe'
+  url:            http://princeliebe.github.io/
 
 paginate:         2
-google_analytics: 'UA-91425204-3'
-bing_seo:		  'ECA8D4503D79297E7BB223666F18CAF8'
-emailme:          mailto:lqian8@jhu.edu
+emailme:          mailto:princeliebe@gmail.com
 
 gems:             [jekyll-paginate, jekyll-seo-tag, jekyll-sitemap]
 
 github:
-  repo:           https://github.com/qian256/qian256.github.io/
+  repo:           https://github.com/princeliebe/princeliebe.github.io/
 
 tags:
 
-github_username:  qian256
-facebook_username: joe.qian
-linkedin_username: long-qian
+github_username:  princeliebe
+facebook_username: So Yee
+linkedin_username: Junhua Yi
 
 
