--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,6 @@ github:
 tags:
 
 github_username:  princeliebe
-facebook_username: So Yee
-linkedin_username: Junhua Yi
+linkedin_username: Junhua Yee
 
 
