--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ paginate:         2
 google_analytics: 'UA-116205502-1'
 emailme:          mailto:princeliebe@gmail.com
 
-gems:             [jekyll-paginate, jekyll-seo-tag, jekyll-sitemap]
+gems:             [jekyll-paginate, jekyll-seo-tag, jekyll-sitemap, jekyll-feed]
 
 github:
   repo:           https://github.com/princeliebe/princeliebe.github.io/
